Add KcpSharp to the solution as it's now a dependency.

--- a/src/SIPSorcery.csproj
+++ b/src/SIPSorcery.csproj
@@ -76,4 +76,8 @@
     <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.1.1" PrivateAssets="All" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\KcpSharp\src\KcpSharp\KcpSharp.csproj" />
+  </ItemGroup>
+
 </Project>
