--- a/src/SIPSorcery.csproj
+++ b/src/SIPSorcery.csproj
@@ -25,7 +25,7 @@
   </ItemGroup>
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.0;netstandard2.1;netcoreapp3.1;net461;net5.0;net6.0;net6.0-android</TargetFrameworks>
+    <TargetFrameworks>net6.0;net6.0-android</TargetFrameworks>
     <SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'android'">23.0</SupportedOSPlatformVersion>
     <Authors>Aaron Clauson, Christophe Irles, Rafael Soares &amp; Contributors</Authors>
     <Copyright>Copyright © 2010-2022 Aaron Clauson</Copyright>
@@ -83,7 +83,7 @@ Real-time communications library with full support for the Session Initiation Pr
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\KcpSharp\src\KcpSharp\KcpSharp.csproj" />
+    <ProjectReference Include="..\..\VideoThroughReliableUdp\KcpSharp\src\KcpSharp\KcpSharp.csproj" />
   </ItemGroup>
 
 </Project>
